--- a/ansible/playbooks/tasks/deploy_web_container.yml
+++ b/ansible/playbooks/tasks/deploy_web_container.yml
@@ -1,5 +1,11 @@
 ---
 # Podman
+- name: "Manage Podman Packages"
+  ansible.builtin.package:
+    name: "podman"
+    state: "present"
+  become: true
+
 - name: "Start & Enable Podman Auto Update Timer"
   ansible.builtin.service:
     name: "podman-auto-update.timer"
