--- a/ansible/playbooks/tasks/deploy_mariadb_container.yml
+++ b/ansible/playbooks/tasks/deploy_mariadb_container.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Download Image"
   containers.podman.podman_image:
-    name: "docker.io/library/nginx"
+    name: "docker.io/library/mariadb"
     tag: "latest"
     state: "present"
   become: true
@@ -10,18 +10,18 @@
     - "podman"
     - "web"
 
-- name: "Manage container-web Service File"
+- name: "Manage container-mariadb Service File"
   ansible.builtin.template:
-    src: "container-web.service.j2"
-    dest: "/etc/systemd/system/container-web.service"
+    src: "container-mariadb.service.j2"
+    dest: "/etc/systemd/system/container-mariadb.service"
     owner: "root"
     group: "root"
     mode: 0644
   become: true
 
-- name: "Manage container-web Service"
-  ansible.builtin.system:
-    name: "container-web.service"
+- name: "Manage container-mariadb Service"
+  ansible.builtin.systemd:
+    name: "container-mariadb.service"
     state: "started"
     enabled: true
     daemon_reload: true
